Fix Google Button Not Showing

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -692,62 +692,3 @@ vm-player {
 }
 
 
-.mt-6 {
-    margin-top: 2rem;
-}
-
-
-#root > div > div > section > div > div > div.w-full.px-6.mb-2 > div.w-full.mt-4 > button:nth-child(1) {
-    display:none;
-
-}
-
-
-#root > div > div > section > div > div > div.w-full.px-6.mb-2 > div.flex.justify-center.items-center {
-    margin-bottom: 3.3vh;
-}
-
-
-
-@media (orientation: portrait) {
-
-#root>div>div>section>div:before {
-    -webkit-backdrop-filter: blur(32px);
-    backdrop-filter: blur(32px);
-    content: " ";
-    height: 100vh;
-    isolation: isolate;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 0;
-    background: #10141ebf;
-}
-
-    .bg-whole-page {
-
-    -webkit-backdrop-filter: blur(0px);
-    backdrop-filter: blur(0px);
-    background-color: #ff000000;
-}
-
-#root > div > div > section > div > div > h2 {
-    display:none;
-    }
-
-            }
-
-
-
-#root > div > div > section > div > div > div.w-full.px-6.mb-2 > div.relative > div.absolute.inset-0.flex.items-center {
- opacity:0.1;   
-}
-
-
-
-
-#headlessui-dialog-\:rs\: > div.fixed.modal-stream.inset-0.overflow-y-auto {
-    background: #00000057;
-    backdrop-filter: blur(24px);
-}
